[package]
name = "UaaS"
description = "UwU as a Service: The fastest text uwuifier in the west running behind an HTTP server."
version = "1.1.0"
edition = "2021"
authors = ["Akhil Pillai"]
readme = "README.md"
repository = "https://github.com/ackle-dev/UaaS"
license = "MIT"

[[bin]]
name = "uaas"
test = false
bench = false

[build-dependencies]
uwuify = "0.2.2"

[dependencies]
tiny_http = "0.12.0"
uwuify = "0.2.2"
